syntax = "proto3";
option go_package = "/gen";

message Metadata {
    string id = 1;
    string title = 2;
    string description = 3;
    string director = 4;
}

message MovieDetails {
    float rating = 1;
    Metadata metadata = 2;
}

service MetadataService {
    rpc GetMetadata(GetMetadataRequest) returns (GetMetadataResponse);
    rpc PutMetadata(PutMetadataReuqest) returns (PutMetadataResponse);
}

message GetMetadataRequest {
    string movie_id = 1;
}

message GetMetadataResponse {
    Metadata metadata = 1;
}

message PutMetadataReuqest {
    string id = 1;
    Metadata metadata = 2;
}

message PutMetadataResponse {
    string id = 1;
}

service RatingService {
    rpc GetAggregateRating(GetAggregateRatingRequest) returns (GetAggregateRatingResponse);
    rpc PutRating(PutRatingRequest) returns (PutRatingResponse);
}

message GetAggregateRatingRequest {
    string record_id = 1;
    string record_type = 2;
}

message GetAggregateRatingResponse {
    double record_value = 1;
}

message PutRatingRequest {
    string record_id = 1;
    string record_type = 2;
    string user_id = 3;
    int32 rating_value = 4;
}

message PutRatingResponse {
    string record_id = 1;
    int32 rating_value = 2;
}

service MovieService {
    rpc GetMovieDetails(GetMovieDetailsRequest) returns (GetMovieDetailsResponse);
}

message GetMovieDetailsRequest {
    string movie_id = 1;
}

message GetMovieDetailsResponse {
    MovieDetails movie_details = 1;
}
